# powershellmanager

./: .gitignore  BRAINSTORM.md  CLAUDE.md  Cargo.toml  build.rs
src/: activity.rs  app.rs  arrange.rs  config.rs  gui.rs  layout.rs  main.rs  monitor.rs  theme.rs  tray.rs  windows.rs
