[package]
name = "powershellmanager"
version = "0.1.0"
edition = "2021"
description = "System tray app for arranging PowerShell/Terminal windows into grid layouts"

[dependencies]
eframe = "0.31"
egui = "0.31"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "6"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]  }
